[ADD] README.md

--- a/rush00/moviedex/templates/moviedex/moviedex.html
+++ b/rush00/moviedex/templates/moviedex/moviedex.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block content %}
 <div class="page-container">
   <div class="app-container">
-    <h1>Movidex</h1>
+    <h1>Moviedex</h1>
     <div id="moviedex--start-menu">
       <p>A - More Information</p>
       <p>SELECT - Back</p>
